Bring the policy suites and tools to the 1.20 line
The policy source sets compile with --release 17, so the two List.getFirst()
calls -- a Java 21 sequenced-collection method -- become get(0). The rest is
1.20 API and honesty work in the suites and the tools that guard them.

- NbtIo.writeCompressed takes a File on the two oldest supported lines and a
  Path on the two newest, under one identifier, mirroring the reader McCompat
  already adapts; the writer joins it there, and the worldgen-authority fixture
  goes through it. Each line keeps its own file handling rather than having the
  stream opened here.
- RegistrationInfo does not exist on this line. The fixture registers its
  biomes with the stable lifecycle instead, which is exactly what the vanilla
  register helper passes for a built-in entry.
- MappedRegistry's constructor refuses to run before the bootstrap here, so the
  two suites that reach the biome registry through a class initialiser now
  bootstrap first, the way the two that already did.
- The polar-foliage grass anchors assert BOTH grass ids. The block is spelled
  one way on the two oldest lines and another on the two newest, and the tag
  carries both, each optional; asserting both is what makes dropping either
  spelling -- which unguards grass on half the range -- a failure.
- Two worldgen-authority source anchors re-pointed at what enforces the rule
  now rather than at the spelling it used to have: the non-creating state read
  goes through the storage adapter and the creating one stays a separate call;
  and the level-load state cache, which is a creating read and now runs before
  confirmEnable, is asserted to refuse a world Latitude did not generate before
  it touches storage, to be the only creating read before that point, and to be
  one of exactly two in the file.
- The shipping-command permission comment named the wrong Minecraft line for
  its own claim. No version this jar supports publishes the predicate factory it
  mentions; the